fix(grids): flex wrap added to the base grid on little screens

--- a/src/components/grids/base/styles.css
+++ b/src/components/grids/base/styles.css
@@ -6,5 +6,6 @@
 @media (max-width: 550px) {
   .base-grid {
     gap: 11px;
+    flex-wrap: wrap;
   }
 }
